Rename class from EditWiringsAction to EditFieldMappings action, as this is what it actually does.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2601 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -264,9 +264,9 @@
          </action>          
          <action
                label="Edit field mappings"
-               class="com.collabnet.ccf.actions.EditWiringsAction"
+               class="com.collabnet.ccf.actions.EditFieldMappingsAction"
                menubarPath="group.b"
-               id="com.collabnet.ccf.actions.EditWiringsAction">
+               id="com.collabnet.ccf.actions.EditFieldMappingsAction">
          </action>                      
          <action
                label="Delete identity mappings"
