Create reverse mapping option.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/branches/GUIConsole@2626 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -158,6 +158,17 @@
       </objectContribution>
       
       <objectContribution
+            objectClass="com.collabnet.ccf.model.InconsistentIdentityMapping"
+            id="com.collabnet.ccf.model.InconsistentIdentityMapping">                                                     
+         <action
+               label="Create reverse mapping"
+               menubarPath="group.c"
+               class="com.collabnet.ccf.actions.CreateReverseIdentityMappingAction"
+               id="com.collabnet.ccf.actions.CreateReverseIdentityMappingAction">
+         </action>                                                                         
+      </objectContribution>            
+      
+      <objectContribution
             objectClass="com.collabnet.ccf.model.IdentityMapping"
             id="com.collabnet.ccf.model.IdentityMapping">  
          <action
