Show status in editor rather than dialog (will be adding a 2nd page for project mappings).
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@2710 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -406,7 +406,15 @@
             contributorClass="com.collabnet.ccf.editors.IdentityMappingActionBarContributor"
             class="com.collabnet.ccf.editors.IdentityMappingEditor"
             id="com.collabnet.ccf.editors.IdentityMappingEditor">
-      </editor>                                
+      </editor>
+      <editor
+            name="JMX Console Editor"
+            default="false"
+            icon="icons/monitor.gif"
+            extensions="jmx"
+            class="com.collabnet.ccf.editors.JmxConsoleEditor"
+            id="com.collabnet.ccf.editors.JmxConsoleEditor">
+      </editor>                                       
    </extension>
 
 </plugin>
