Copy hospital entry to clipboard.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@2898 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -129,7 +129,13 @@
          point="org.eclipse.ui.popupMenus">                    
       <objectContribution
             objectClass="com.collabnet.ccf.model.Patient"
-            id="com.collabnet.ccf.model.Patient">                 
+            id="com.collabnet.ccf.model.Patient">   
+         <action
+               label="Copy to clipboard"
+               menubarPath="group.a"
+               class="com.collabnet.ccf.actions.CopyPatientToClipboardAction"
+               id="com.collabnet.ccf.actions.CopyPatientToClipboardAction">
+         </action>                           
          <action
                label="Examine quarantined artifact"
                menubarPath="group.a"
