--- a/com.collabnet.ccf/build.properties
+++ b/com.collabnet.ccf/build.properties
@@ -8,7 +8,8 @@ bin.includes = plugin.xml,\
                about.properties,\
                cn_icon.png,\
                schema/,\
-               .
+               .,\
+               lib/dom4j_1.6.1.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
