Reintegrated graphical data mapping branch
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@2933 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/build.properties
+++ b/com.collabnet.ccf/build.properties
@@ -1,15 +1,16 @@
 bin.includes = plugin.xml,\
                META-INF/,\
                icons/,\
-               lib/,\
-               lib/hsqldb.jar,\
                about.html,\
                about.ini,\
                about.properties,\
                cn_icon.png,\
                schema/,\
                .,\
-               lib/dom4j_1.6.1.jar
+               xslt/,\
+               lib/,\
+               jacob-1.14.3-x86.dll,\
+               jacob-1.14.3-x64.dll
 jars.compile.order = .
 source.. = src/
 output.. = bin/
