Change Project Mapping Group option to enable mass updates
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3195 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -361,7 +361,13 @@
                class="com.collabnet.ccf.actions.DeleteSynchronizationStatusAction"
                menubarPath="group.d"
                id="com.collabnet.ccf.actions.DeleteSynchronizationStatusAction">
-         </action> 
+         </action>
+         <action
+               label="Change project mapping group..."
+               class="com.collabnet.ccf.actions.ChangeProjectMappingGroupAction"
+               menubarPath="group.d"
+               id="com.collabnet.ccf.actions.ChangeProjectMappingGroupAction">
+         </action>          
          <action
                label="Change project mapping..."
                class="com.collabnet.ccf.actions.ChangeSynchronizationStatusAction"
