Remove old dependencies
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3215 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/build.properties
+++ b/com.collabnet.ccf/build.properties
@@ -8,9 +8,7 @@ bin.includes = plugin.xml,\
                schema/,\
                .,\
                xslt/,\
-               lib/,\
-               jacob-1.14.3-x86.dll,\
-               jacob-1.14.3-x64.dll
+               lib/
 jars.compile.order = .
 source.. = src/
 output.. = bin/
