--- a/com.collabnet.ccf.qc/build.properties
+++ b/com.collabnet.ccf.qc/build.properties
@@ -6,4 +6,8 @@ bin.includes = META-INF/,\
                jacob-1.14.3-x86.dll,\
                lib/,\
                icons/,\
-               plugin.xml
+               plugin.xml,\
+               about.html,\
+               about.ini,\
+               about.properties,\
+               cn_icon.png
