--- a/com.collabnet.ccf.teamforge/build.properties
+++ b/com.collabnet.ccf.teamforge/build.properties
@@ -3,4 +3,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                icons/,\
-               plugin.xml
+               plugin.xml,\
+               about.html,\
+               about.ini,\
+               about.properties,\
+               cn_icon.png
