Change properties file name from sw.properties to swp.properties
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3247 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf.sw/plugin.xml
+++ b/com.collabnet.ccf.sw/plugin.xml
@@ -9,7 +9,7 @@
             repositoryKind="TRACKER"
             class="com.collabnet.ccf.sw.ScrumWorksCcfParticipant"
             sequence="40"
-            propertyFile="sw.properties"
+            propertyFile="swp.properties"
             id="com.collabnet.ccf.sw.ScrumWorksCcfParticipant">
       </participant>                   
    </extension>
