change system id from ScrumWorks to ScrumWorksPro and system kind from SW to SWP
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3285 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf.sw/plugin.xml
+++ b/com.collabnet.ccf.sw/plugin.xml
@@ -4,8 +4,8 @@
    <extension
          point="com.collabnet.ccf.ccfParticipants">
       <participant
-            name="ScrumWorks"
-            type="SW"
+            name="ScrumWorksPro"
+            type="SWP"
             repositoryKind="TRACKER"
             class="com.collabnet.ccf.sw.ScrumWorksCcfParticipant"
             sequence="40"
