--- a/com.collabnet.ccf.teamforge_sw/plugin.xml
+++ b/com.collabnet.ccf.teamforge_sw/plugin.xml
@@ -13,6 +13,11 @@
 	        id="com.collabnet.ccf.teamforge_sw.commands.mapProjects"
 	        name="Map Projects">
 		</command>
+		<command
+	        categoryId="com.collabnet.ccf.teamforge_sw.commands"
+	        id="com.collabnet.ccf.teamforge_sw.commands.syncThemes"
+	        name="Synchronize Themes">
+		</command>		
 	</extension>
 
 	<extension
@@ -32,7 +37,23 @@
 	             </and>
 	          	</visibleWhen>
 	        </command>
-	    </menuContribution>            
+	    </menuContribution>
+	 	<menuContribution
+	          locationURI="popup:org.eclipse.ui.popup.any?after=additions">
+	        <command
+	             commandId="com.collabnet.ccf.teamforge_sw.commands.syncThemes"
+	             label="Synchronize themes..."
+	             style="push">
+	        	<visibleWhen
+	                checkEnabled="true">
+	             <and>
+	                <count
+	                      value="1">
+	                </count>  
+	             </and>
+	          	</visibleWhen>
+	        </command>
+	    </menuContribution>            	                
 	</extension>
    
     <extension
@@ -55,9 +76,27 @@
           </iterate>
        </enabledWhen>
     </handler>
+     <handler
+          class="com.collabnet.ccf.teamforge_sw.SynchronizeThemesHandler"
+          commandId="com.collabnet.ccf.teamforge_sw.commands.syncThemes">
+       <enabledWhen>
+          <iterate>
+              <and>
+                <adapt
+                      type="com.collabnet.ccf.model.AdministratorSynchronizationStatus">
+                </adapt>
+                <test
+                	  forcePluginActivation="true"
+                      property="com.collabnet.ccf.teamforge_sw.isTrackerPbisMapping"
+                      value="true">
+                </test>                                    
+			 </and>
+          </iterate>
+       </enabledWhen>
+    </handler>    
  </extension>
       
-    <extension
+ <extension
          point="org.eclipse.core.expressions.propertyTesters">
       <propertyTester
             class="com.collabnet.ccf.teamforge_sw.ProjectMappingsPropertyTester"
@@ -66,6 +105,13 @@
             properties="isTeamForgeSwpLandscape"
             type="com.collabnet.ccf.model.AdministratorProjectMappings">
       </propertyTester>
+      <propertyTester
+            class="com.collabnet.ccf.teamforge_sw.ProjectMappingsPropertyTester"
+            id="com.collabnet.ccf.teamforge_sw.ProjectMappingsPropertyTester"
+            namespace="com.collabnet.ccf.teamforge_sw"
+            properties="isTrackerPbisMapping"
+            type="com.collabnet.ccf.model.AdministratorSynchronizationStatus">
+      </propertyTester>      
    </extension>   
 
 </plugin>
