Int-85 - Include Map Projects option on context menu for Landscape
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3342 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf.teamforge_sw/plugin.xml
+++ b/com.collabnet.ccf.teamforge_sw/plugin.xml
@@ -64,9 +64,6 @@
        <enabledWhen>
           <iterate>
               <and>
-                <adapt
-                      type="com.collabnet.ccf.model.AdministratorProjectMappings">
-                </adapt>
                 <test
                 	  forcePluginActivation="true"
                       property="com.collabnet.ccf.teamforge_sw.isTeamForgeSwpLandscape"
@@ -105,6 +102,13 @@
             properties="isTeamForgeSwpLandscape"
             type="com.collabnet.ccf.model.AdministratorProjectMappings">
       </propertyTester>
+      <propertyTester
+            class="com.collabnet.ccf.teamforge_sw.ProjectMappingsPropertyTester"
+            id="com.collabnet.ccf.teamforge_sw.ProjectMappingsPropertyTester"
+            namespace="com.collabnet.ccf.teamforge_sw"
+            properties="isTeamForgeSwpLandscape"
+            type="com.collabnet.ccf.model.AdministratorLandscape">
+      </propertyTester>      
       <propertyTester
             class="com.collabnet.ccf.teamforge_sw.ProjectMappingsPropertyTester"
             id="com.collabnet.ccf.teamforge_sw.ProjectMappingsPropertyTester"
