Int86 - Don't show TF planning folders -> SWP mappings in view.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3343 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf.teamforge_sw/plugin.xml
+++ b/com.collabnet.ccf.teamforge_sw/plugin.xml
@@ -2,6 +2,14 @@
 <?eclipse version="3.4"?>
 <plugin>
 
+   <extension
+         point="com.collabnet.ccf.mappingVisibilityCheckers">
+      <visibilityChecker
+            class="com.collabnet.ccf.teamforge_sw.ProjectMappingVisibilityChecker"
+            id="com.collabnet.ccf.teamforge_sw.ProjectMappingVisibilityChecker">
+      </visibilityChecker>                   
+   </extension>
+
 	<extension point="org.eclipse.ui.commands">
 		<category
         	name="CollabNet CCF GUI TeamForge/ScrumWorks Commands"
