Disallow mapping SWP product to multiple TF projects, based on preference.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3556 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf.teamforge_sw/plugin.xml
+++ b/com.collabnet.ccf.teamforge_sw/plugin.xml
@@ -163,6 +163,21 @@
             properties="isTrackerPbisMapping,isTeamForgeScrumWorksMapping"
             type="com.collabnet.ccf.model.AdministratorSynchronizationStatus">
       </propertyTester>      
+   </extension> 
+   
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer class="com.collabnet.ccf.teamforge_sw.preferences.TeamForgeSwpPreferenceInitializer"/>
    </extension>   
+   
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            name="TF-SWP Integration"
+            category="com.collabnet.ccf.preferences"
+            class="com.collabnet.ccf.teamforge_sw.preferences.TeamForgeSwpPreferencesPage"
+            id="com.collabnet.ccf.teamforge_sw.preferences.TeamForgeSwpPreferencesPage">
+      </page>
+   </extension>     
 
 </plugin>
