Update tasks tracker Point Person metadata (hide/show) when user mapping option is changed.
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3561 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf.teamforge_sw/plugin.xml
+++ b/com.collabnet.ccf.teamforge_sw/plugin.xml
@@ -9,6 +9,14 @@
             id="com.collabnet.ccf.teamforge_sw.ProjectMappingVisibilityChecker">
       </visibilityChecker>                   
    </extension>
+   
+   <extension
+         point="com.collabnet.ccf.mappingChangeListeners">
+      <changeListener
+            class="com.collabnet.ccf.teamforge_sw.TeamForgeSwpProjectMappingChangeListener"
+            id="com.collabnet.ccf.teamforge_sw.TeamForgeSwpProjectMappingChangeListener">
+      </changeListener>                   
+   </extension>   
 
 	<extension point="org.eclipse.ui.commands">
 		<category
