--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -5,6 +5,8 @@
    <extension-point id="ccfParticipants" name="CCF Participants" schema="schema/ccfParticipants.exsd"/>
    
    <extension-point id="mappingVisibilityCheckers" name="CCF Project Mapping Visibility Checkers" schema="schema/mappingVisibilityCheckers.exsd"/>
+   
+   <extension-point id="mappingChangeListeners" name="CCF Project Mapping Change Listeners" schema="schema/mappingChangeListeners.exsd"/>
 
    <extension
          point="org.eclipse.core.runtime.preferences">
