Enhance Delete Project Mapping to support selection of a mapping category (i.e., SWP product or entity type category)
git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk/gui@3583 6771e1e2-0f46-0410-b5d7-d846ff89f743

--- a/com.collabnet.ccf/plugin.xml
+++ b/com.collabnet.ccf/plugin.xml
@@ -277,7 +277,13 @@
                icon="icons/refresh.gif"
                menubarPath="group.b"
                id="com.collabnet.ccf.actions.RefreshAction">
-         </action>                                                              
+         </action>
+         <action
+               label="Delete project mappings"
+               class="com.collabnet.ccf.actions.DeleteSynchronizationStatusAction"
+               menubarPath="group.d"
+               id="com.collabnet.ccf.actions.DeleteSynchronizationStatusAction">
+         </action>                                                                       
       </objectContribution>        
       
       <objectContribution
